--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -52,7 +52,7 @@
     (b5_footer_schema != 'none' ? (b5_footer_schema == 'dark' ? ' text-light' : ' text-dark' ) : ' ') ~
     (b5_footer_bg_schema != 'none' ? " bg-#{b5_footer_bg_schema}" : ' ') %}
 
-<header data-elastic-exclude="true">
+<header data-elastic-exclude="true" class="access-operations-drupal-portal">
     {{ page.header }}
 
     {% if page.nav_access_main or page.nav_access_additional %}
@@ -85,7 +85,7 @@
 
 </header>
 
-<main role="main">
+<main role="main" class="access-operations-drupal-portal">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
 
     {% set sidebar_first_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3' %}
@@ -130,7 +130,7 @@
 </main>
 
 {% if page.footer %}
-    <footer class="mt-auto {{ footer_classes }}" data-elastic-exclude="true">
+    <footer class="mt-auto access-operations-drupal-portal {{ footer_classes }}" data-elastic-exclude="true">
         <div class="{{ b5_top_container }}">
             <div class="row pt-4">
                 <div class="col-md-6 col-sm-12">
