Adding the "access-operations-drupal-portal" parent CSS class for all of the CSS including bootstrap

--- a/b5_ac_conect/scss/style.scss
+++ b/b5_ac_conect/scss/style.scss
@@ -1,15 +1,18 @@
-// Include ACCESS
-@import 'variables_access';
 
-// Sub theme styling.
-@import 'variables_drupal';
+.access-operations-drupal-portal {
+  // Include ACCESS
+  @import 'variables_access';
 
-// Bootstrap overriden variables.
-// @see https://getbootstrap.com/docs/5.2/customize/sass/#variable-defaults.
-@import 'variables_bootstrap';
+  // Sub theme styling.
+  @import 'variables_drupal';
 
-// Include bootstrap.
-@import '../../bootstrap5/scss/style';
+  // Bootstrap overriden variables.
+  // @see https://getbootstrap.com/docs/5.2/customize/sass/#variable-defaults.
+  @import 'variables_bootstrap';
 
-// Include ACCESS
-@import 'styles_access';
+  // Include bootstrap.
+  @import '../../bootstrap5/scss/style';
+
+  // Include ACCESS
+  @import 'styles_access';
+}
