--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -101,7 +101,7 @@
     tableOfContents,
     universalMenuItems,
     universalMenus,
-  } from "https://esm.sh/@access-ci/ui@0.2.5";
+  } from "https://esm.sh/@access-ci/ui@0.3.0-beta3";
 
   const siteItems = [
     {
@@ -149,7 +149,7 @@
   ];
 
   universalMenus({
-    isLoggedIn: true, // document.cookie.split("; ").includes("SESSaccesscisso=Operations"),
+    isLoggedIn: document.cookie.split("; ").includes("SESSaccesscisso=Operations"),
     loginUrl: "/user/login",
     logoutUrl: "/logout",
     siteName: "Operations",
