--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -151,7 +151,7 @@
   universalMenus({
     isLoggedIn: document.cookie.split("; ").includes("SESSaccesscisso=Operations"),
     loginUrl: "/user/login",
-    logoutUrl: "/logout",
+    logoutUrl: "/user/logout",
     siteName: "Operations",
     target: document.getElementById("universal-menus"),
   });
