Upgrade access-ci-ui to 0.3.1

--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -101,7 +101,7 @@
     tableOfContents,
     universalMenuItems,
     universalMenus,
-  } from "https://esm.sh/@access-ci/ui@0.3.0-beta3";
+  } from "https://esm.sh/@access-ci/ui@0.3.1";
 
   const siteItems = [
     {
