--- a/b5_ac_conect/templates/layout/html.html.twig
+++ b/b5_ac_conect/templates/layout/html.html.twig
@@ -42,6 +42,7 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token }}">
     <js-placeholder token="{{ placeholder_token }}">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wdth,wght@0,70,400;0,100,400;0,100,500;0,100,600;0,100,700;0,100,800;1,100,400&amp;display=swap" rel="stylesheet" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     {#
